Add Dtos for view authors and books
