# dtos/authorDTO.go
@@ -1,0 +1,7 @@
+package dto
+
+type AuthorDTO struct {
+	ID    uint     `json:"id"`
+	Name  string   `json:"name"`
+	Books []string `json:"books"`
+}
